--- a/src/main/webapp/departmentList.html
+++ b/src/main/webapp/departmentList.html
@@ -15,44 +15,46 @@
 <div class="easyui-layout" data-options="fit:true" id="useBox">
     <div data-options="region:'center',split:true">
         <!--一级部门添加-->
-        <form id="addOneForm" method="post">
+        <form id="addFirstForm" method="post">
                 <div class="tableFind" style="text-align: center;width: 100%">
 
                     <p>
                         <label style="width: 100px">一级部门名称：</label>
-                        <input type="text" class="easyui-validatebox TailInput" name="deptName" style="width: 160px" data-options="required:true">
+                        <input type="text" class="easyui-validatebox TailInput" name="departmentName" style="width: 160px" data-options="required:true">
                         <span class="formSpan">*</span>
                     </p>
                     <p>
                         <label style="width: 100px">上午上班时间：</label>
-                        <input type="text" class="easyui-validatebox TailInput" name="cardNumber" style="width: 50px" data-options="required:true">
+                        <input type="text" class="easyui-validatebox TailInput" name="startTimeAM" style="width: 50px" data-options="required:true">
                         (时间格式为"12:00")
                         <span class="formSpan">*</span>
                     </p>
                     <p>
                         <label style="width: 100px">上午下班时间：</label>
-                        <input type="text" class="easyui-validatebox TailInput" name="cardNumber" style="width: 50px" data-options="required:true">
+                        <input type="text" class="easyui-validatebox TailInput" name="endTimeAM" style="width: 50px" data-options="required:true">
                         (时间格式为"12:00")
                         <span class="formSpan">*</span>
                     </p>
                     <p>
                         <label style="width: 100px">下午上班时间：</label>
-                        <input type="text" class="easyui-validatebox TailInput" name="cardNumber" style="width: 50px" data-options="required:true">
+                        <input type="text" class="easyui-validatebox TailInput" name="startTimePM" style="width: 50px" data-options="required:true">
                         (时间格式为"12:00")
                         <span class="formSpan">*</span>
                     </p>
                     <p>
                         <label style="width: 100px">下午下班时间：</label>
-                        <input type="text" class="easyui-validatebox TailInput" name="cardNumber" style="width: 50px" data-options="required:true">
+                        <input type="text" class="easyui-validatebox TailInput" name="endTimePM" style="width: 50px" data-options="required:true">
                         (时间格式为"12:00")
                         <span class="formSpan">*</span>
                     </p>
-                        <div class="forSubmint"> <a href="#" class="easyui-linkbutton"  iconCls="icon-save">添加部门</a></div>
+                        <div class="forSubmint">
+                            <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-save" onclick="submitFirstAdd()" >添加部门</a>
+                        </div>
                 </div>
             </form>
         <!--表格列表-->
         <div class="tableCon">
-            <table id="table" class="tableStyle"></table>
+            <table id="tableFirst" class="tableStyle"></table>
         </div>
     </div>
 </div>
@@ -61,60 +63,58 @@
 <div id="manageChild">
     <div data-options="region:'center',split:true">
         <!--二级部门添加-->
-        <form id="addTowForm" method="post">
+        <form id="addSecondForm" method="post">
             <div class="tableFind" style="text-align: center;width: 100%">
                 <p>
-                    <label style="width:100px;">一级部门：</label>
-                    <select class="easyui-combobox"style="width:160px;height:30px;">
-                        <option value="">请选择</option>
-                        <option value="1">财务部</option>
-                        <option value="2">人事部</option>
-                    </select>
+                    <label style="width:100px;">一级部门&nbsp;&nbsp;：</label>
+                    <input type="text" id="deptSelect" name="deptSelect" value="请选择"/>
                     <span class="formSpan">*</span>
                 </p>
                 <p>
                     <label style="width: 100px">二级部门名称：</label>
-                    <input type="text" class="easyui-validatebox TailInput" name="deptName" style="width: 160px" data-options="required:true">
+                    <input type="text" class="easyui-validatebox TailInput" name="departmentName" style="width: 160px" data-options="required:true">
                     <span class="formSpan">*</span>
                 </p>
                 <p>
                     <label style="width: 100px">上午上班时间：</label>
-                    <input type="text" class="easyui-validatebox TailInput" name="cardNumber" style="width: 50px" data-options="required:true">
+                    <input type="text" class="easyui-validatebox TailInput" name="startTimeAM" style="width: 50px" data-options="required:true">
                     (时间格式为"12:00")
                     <span class="formSpan">*</span>
                 </p>
                 <p>
                     <label style="width: 100px">上午下班时间：</label>
-                    <input type="text" class="easyui-validatebox TailInput" name="cardNumber" style="width: 50px" data-options="required:true">
+                    <input type="text" class="easyui-validatebox TailInput" name="endTimeAM" style="width: 50px" data-options="required:true">
                     (时间格式为"12:00")
                     <span class="formSpan">*</span>
                 </p>
                 <p>
                     <label style="width: 100px">下午上班时间：</label>
-                    <input type="text" class="easyui-validatebox TailInput" name="cardNumber" style="width: 50px" data-options="required:true">
+                    <input type="text" class="easyui-validatebox TailInput" name="startTimePM" style="width: 50px" data-options="required:true">
                     (时间格式为"12:00")
                     <span class="formSpan">*</span>
                 </p>
                 <p>
                     <label style="width: 100px">下午下班时间：</label>
-                    <input type="text" class="easyui-validatebox TailInput" name="cardNumber" style="width: 50px" data-options="required:true">
+                    <input type="text" class="easyui-validatebox TailInput" name="endTimePM" style="width: 50px" data-options="required:true">
                     (时间格式为"12:00")
                     <span class="formSpan">*</span>
                 </p>
                 </table>
-                <div class="forSubmint"> <a href="#" class="easyui-linkbutton"  iconCls="icon-save" >添加部门</a></div>
+                <div class="forSubmint">
+                    <a href="javascript:void(0)" class="easyui-linkbutton" plain="true" iconCls="icon-save" onclick="submitSecondAdd()" >添加部门</a>
+                </div>
             </div>
         </form>
         <!--表格列表-->
         <div class="tableCon">
-            <table id="tableTow" class="tableStyle"></table>
+            <table id="tableSecond" class="tableStyle"></table>
         </div>
     </div>
 </div>
 
 <!--弹出：编辑一级部门-->
-<div id="editOneBox">
-    <form id="editOneForm" method="post">
+<div id="editFirstBox">
+    <form id="editFirstForm" method="post">
         <div class="tableFind" style="text-align: center;width: 100%">
             <p>
                 <label style="width: 100px">一级部门编号：</label>
@@ -151,14 +151,14 @@
                 <span class="formSpan">*</span>
             </p>
             </table>
-            <div class="forSubmint"> <a href="#" class="easyui-linkbutton"  iconCls="icon-save" >添加部门</a></div>
+            <a href="javascript:void(0)" class="easyui-linkbutton"  iconCls="icon-save" onclick="submitFirstEdit()" >修改部门</a>
         </div>
     </form>
 </div>
 
 <!--弹出：编辑二级部门-->
-<div id="editTowBox">
-    <form id="editTowForm" method="post">
+<div id="editSecondBox">
+    <form id="editSecondForm" method="post">
         <div class="tableFind" style="text-align: center;width: 100%">
             <p>
                 <label style="width: 100px">二级部门编号：</label>
@@ -195,7 +195,9 @@
                 <span class="formSpan">*</span>
             </p>
             </table>
-            <div class="forSubmint"> <a href="#" class="easyui-linkbutton"  iconCls="icon-save" >添加部门</a></div>
+            <div class="forSubmint">
+                <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-save" onclick="submitSecondEdit()" >修改部门</a>
+            </div>
         </div>
     </form>
 </div>
