修改note的申请人和代理人的查看选择方式前

--- a/src/main/webapp/adminPopedomList.html
+++ b/src/main/webapp/adminPopedomList.html
@@ -17,8 +17,8 @@
         <!--表格查询-->
         <div class="tableFind">
             <p>
-                <label>用户名：</label><input type="text" id="empSearch"/>
-                <a id="btn" href="javascript:" class="easyui-linkbutton tableFindBut" data-options="iconCls:'icon-search'" onclick="obj.find()">查询</a>
+                <label>用户名：</label><input type="text" id="adminName"/>
+                <a id="btn" href="javascript:void(0)" class="easyui-linkbutton tableFindBut" data-options="iconCls:'icon-search'" onclick="findSomeAdmins()">查询</a>
             </p>
         </div>
         <!--表格列表-->
