note的新增和修改方法完成，接下来需要修改上午下午的显示，改回以前的模式

--- a/src/main/webapp/attendanToday.html
+++ b/src/main/webapp/attendanToday.html
@@ -12,7 +12,7 @@
 <body>
 <!--出勤状态下拉列表-->
 <div id="div1" style="display: none;">
-    <select id="sel">
+    <select class="sel">
         <option value="1">出勤</option>
         <option value="2">婚假</option>
         <option value="3">产假</option>
