需要修改上午下午的显示修改完成

--- a/src/main/webapp/noteList.html
+++ b/src/main/webapp/noteList.html
@@ -207,7 +207,9 @@
                         <td class="TailLabel">请假起始时间：</td>
                         <td>
                             <input type="text" id="startDate" name="startDate" class="easyui-datebox"style="width: 120px;height:26px;"/>
-                            <select class="easyui-combobox" name="startTime" id="startTime" style="width:60px;height:30px;">
+                            <select class="easyui-combobox" name="startTime"  style="width:60px;height:30px;">
+                                <option value="上午">上午</option>
+                                <option value="下午">下午</option>
                             </select>
                             <span class="formSpan">*</span>
                         </td>
@@ -216,7 +218,9 @@
                         <td class="TailLabel">请假结束时间：：</td>
                         <td>
                             <input type="text" id="endDate" name="endDate" class="easyui-datebox"style="width: 120px;height:26px;"/>
-                            <select class="easyui-combobox" id="endTime" name="endTime" style="width:60px;height:30px;">
+                            <select class="easyui-combobox"name="endTime" style="width:60px;height:30px;">
+                                <option value="上午">上午</option>
+                                <option value="下午">下午</option>
                             </select>
                             <span class="formSpan">*</span>
                         </td>
