今日考勤功能完成了部分

--- a/src/main/webapp/attendanceToday.html
+++ b/src/main/webapp/attendanceToday.html
@@ -25,14 +25,14 @@
         <!--表格查询-->
         <div class="tableFind">
             <p>
-                <label>部门：</label><input type="text" id="deptSelect" value="全部"/>
-                <label>出勤日期：</label><input type="text" id="dd" class="easyui-datebox"style="width: 16%;height:26px;"/>
+                <label>部门：</label><input type="text" id="deptSelect" name="deptSelect" value="全部"/>
+                <label>出勤日期：</label><input type="text" id="attendanceDate" name="attendanceDate" class="easyui-datebox"style="width: 16%;height:26px;"/>
                 <label>出勤时段：</label>
-                <select class="easyui-combobox"style="width:160px;height:30px;">
-                    <option value="1">上午</option>
-                    <option value="2">下午</option>
+                <select class="easyui-combobox"style="width:160px;height:30px;" name="attendanceTime" id="attendanceTime">
+                    <option value="上午">上午</option>
+                    <option value="下午">下午</option>
                 </select>
-                <a id="btn" href="javascript:" class="easyui-linkbutton tableFindBut" data-options="iconCls:'icon-search'" onclick="find()">查询</a>
+                <a id="btn" href="javascript:" class="easyui-linkbutton tableFindBut" data-options="iconCls:'icon-search'" onclick="findSome()">查询</a>
             </p>
         </div>
 
@@ -66,7 +66,7 @@
 <script src="js/jquery-easyui/jquery.min.js"></script>
 <script src="js/jquery-easyui/jquery.easyui.min.js"></script>
 <script src="js/jquery-easyui/local/easyui-lang-zh_CN.js"></script>
-<script src="js/attendanToday.js"></script>
+<script src="js/attendanceToday.js"></script>
 
 </body>
 </html>
