--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -34,8 +34,7 @@
                 <p><i class="i_a i_pass"></i> <a href="adminPopedomList.html" target="frameName">权限分配</a> </p>
             </div>
             <div title="考勤管理" data-options="iconCls:'icon-remove'" class="mainPanle">
-                <p><i class="i_a i_sport02"></i><a href="attendanToday.html" target="frameName">今日考勤</a> </p>
-<!--                <p><i class="i_a i_find01"></i><a href="ph.html" target="frameName">考勤查询</a> </p>-->
+                <p><i class="i_a i_sport02"></i><a href=" attendanceToday.html" target="frameName">今日考勤</a> </p>
             </div>
             <div title="请假管理" data-options="iconCls:'icon-left04'" class="mainPanle">
                 <p><i class="i_a i_action"></i><a href="noteList.html" target="frameName">请假管理</a> </p>
