--- a/src/main/webapp/attendanceToday.html
+++ b/src/main/webapp/attendanceToday.html
@@ -10,14 +10,26 @@
 
 </head>
 <body>
+
 <!--出勤状态下拉列表-->
 <div id="div1" style="display: none;">
-    <select class="sel">
+    <select id="attendanceType">
         <option value="1">出勤</option>
-        <option value="2">婚假</option>
-        <option value="3">产假</option>
+        <option value="2">公休</option>
+        <option value="3">迟到</option>
+        <option value="4">旷工</option>
+        <option value="5">外出</option>
+        <option value="6">出差</option>
+        <option value="7">加班</option>
+        <option value="8">倒休</option>
+        <option value="9">事假</option>
+        <option value="10">病假</option>
+        <option value="11">婚假</option>
+        <option value="12">丧假</option>
+        <option value="13">产假</option>
     </select>
 </div>
+
 
 <!--页面：加载表格-->
 <div class="easyui-layout" data-options="fit:true" id="useBox">‘
